--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn-login {
+        @apply w-[300px] rounded-sm px-10 py-2 transition-all duration-700 ease-in-out
+    }
+
+    .btn-transition {
+        @apply transition-all duration-700 ease-in-out
+    }
+}
