--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,85 @@
     @apply self-center text-slate-400 group-hover:text-white
   }
 }
+
+@font-face {
+  font-family: 'Lexend Deca';
+  src: url('/src/assets/font/LexendDeca-Bold.woff2') format('woff2'),
+      url('/src/assets/font/LexendDeca-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lexend Deca';
+  src: url('/src/assets/font/LexendDeca-Black.woff2') format('woff2'),
+      url('/src/assets/font/LexendDeca-Black.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lexend Deca';
+  src: url('/src/assets/font/LexendDeca-ExtraBold.woff2') format('woff2'),
+      url('/src/assets/font/LexendDeca-ExtraBold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lexend Deca';
+  src: url('/src/assets/font/LexendDeca-ExtraLight.woff2') format('woff2'),
+      url('/src/assets/font/LexendDeca-ExtraLight.woff') format('woff');
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lexend Deca';
+  src: url('/src/assets/font/LexendDeca-Medium.woff2') format('woff2'),
+      url('/src/assets/font/LexendDeca-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lexend Deca';
+  src: url('/src/assets/font/LexendDeca-Light.woff2') format('woff2'),
+      url('/src/assets/font/LexendDeca-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lexend Deca';
+  src: url('/src/assets/font/LexendDeca-Regular.woff2') format('woff2'),
+      url('/src/assets/font/LexendDeca-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lexend Deca';
+  src: url('/src/assets/font/LexendDeca-Thin.woff2') format('woff2'),
+      url('/src/assets/font/LexendDeca-Thin.woff') format('woff');
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lexend Deca';
+  src: url('/src/assets/font/LexendDeca-SemiBold.woff2') format('woff2'),
+      url('/src/assets/font/LexendDeca-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
